--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ env:
 phases:
   install:
     commands: 
-      - echo Installing Terraform...
+      - echo "Installing Terraform..."
       - curl -O https://releases.hashicorp.com/terraform/1.8.5/terraform_1.8.5_linux_amd64.zip
       - unzip terraform_1.8.5_linux_amd64.zip
       - mv terraform /usr/local/bin/
@@ -17,17 +17,17 @@ phases:
 
   pre_build: 
     commands: 
-      - echo Initializing Terraform...
+      - echo "Initializing Terraform..."
       - terraform init
     
   build: 
     commands:
-      - echo Validating Terraform Code...
+      - echo "Validating Terraform Code..."
       - terraform validate
       - echo Planning Terraform Deployment...
       - terraform plan -out=tfplan
-  
-artifacts:
-  files: 
-    - tfplan
-  name: terraform-plan-artifact
+
+  post_build:
+    commands:
+      - echo "Uploading the tfplan to s3 Bucket..."
+      - aws s3 cp tfplan s3://$AWS_BUCKET_NAME/tfplan
